--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,6 @@ main {
 
 @include mixins.monitor {
     .reveal {
-        height: 99vh;
         position: relative;
         transform: translateY(150px);
         opacity: 0;
